update fixing overflow bug with translate animation

--- a/src/App.css
+++ b/src/App.css
@@ -19,9 +19,14 @@
 body{
 
   background-color: var(--Almost-White);
-  overflow-x: hidden;
   font-weight: 500;
   height: 100vh;
   width: 100%;
 
+}
+
+html,  body {
+
+  overflow-x: hidden;
+  position: fixed;
 }
